demo-skylink/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skylink-demo
  labels:
    app.kubernetes.io/part-of: skylink-demo
